Add string resources for button names and question value.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">FritzCamronGeoQuiz</string>
+    <string name="question_text">Portland is the capitol of Oregon.</string>
+    <string name="true_button">True</string>
+    <string name="false_button">False</string>
 </resources>
