Add next button functionality in MVC.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,8 @@
         Portland is the capitol of Oregon.
     </string>
 
+    <string name="question_north_america">
+        Crater Lake is the largest lake in North America.
+    </string>
+
 </resources>
