--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,20 @@
         Crater Lake is the largest lake in North America.
     </string>
 
+    <string name="warning_text">
+        Are you sure you want to do this?
+    </string>
+
+    <string name="show_answer_button">
+        Show Answer
+    </string>
+
+    <string name="cheat_button">
+        Cheat!
+    </string>
+
+    <string name="judgment_toast">
+        Cheating is wrong.
+    </string>
+
 </resources>
